18 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION workarounds.

Version 1.3 (10 February 2004) [rursu]
- Updated headers in examples

Changes from 1.2:

    - added copy constructor and assignment operator in CGAL_Min_sphere_d
    - documentation has additonal `Guidelines and Hints' section now
    - default traits class files get included in Min_sphere_d.h now
    - testfiles changed accordingly (removed explicit traits class inclusion)
    - the d-dim Points are no longer maintained in the MinSphere package,
      they have been taken over by Stefan
    - testfiles include hack to suppress MIPS-linkage conflict warnings

Changes from 1.4:

    - added missing doc-file smallest_enclosing_spheres.tex
    - Problems with test programs on 64 Bit not addressed, because
      they are apparently due to a bug in leda_integer that got
      fixed for LEDA 3.7. 

Changes from 1.5:
    - renamed long_description.txt into changes.txt

Changes from 1.6:
    - bug in CGAL_DACd and CGAL_DAHd fixed (there was an undefined
      d, and the code was only working because in all test programs
      there was a d at global scope)
    - test programs changed: d renamed to D to find possible other hidden
      undefined d's (there were none)

Changes from 1.7:
    - static cast replaced by standard-conform enum conversion
    - package name changed from MinSphere to Min_sphere_d to be consistent
      with the other optimization packages

Changes from 1.8:
    - added some explicit assignment operators in order to deal with an
      egcs internal compiler error. 
    - changed inclusion order in testfiles: now leda_rational is included
      last, so basic is included before (seems to be important for some
      reason)

Changes from 1.9:
    - namespace CGAL introduced
    - Rep_distinguisher removed (old SunPro hack) 
    - Distinguishing between representation dependent optimisation spheres